--- a/examples/shared_libs/CMakeLists.txt
+++ b/examples/shared_libs/CMakeLists.txt
@@ -23,3 +23,14 @@ set_tests_properties(SHARED_LIB_TEST_PAGERANK
 add_test(NAME SHARED_LIB_TEST_HITS COMMAND shared_lib_hits)
 set_tests_properties(SHARED_LIB_TEST_HITS
   PROPERTIES PASS_REGULAR_EXPRESSION "Node_ID: \\[.\\], Hub Score: \\[.\.......\\], Auth Score: \\[.\.......\\]")
+
+if (FAISS_LIBRARY)
+    target_link_libraries(shared_lib_snn ${FAISS_LIBRARY})
+    target_link_libraries(shared_lib_snn ${CUDA_CUBLAS_LIBRARIES})
+    target_link_libraries(shared_lib_sm ${FAISS_LIBRARY})
+    target_link_libraries(shared_lib_sm ${CUDA_CUBLAS_LIBRARIES})
+    target_link_libraries(shared_lib_hits ${FAISS_LIBRARY})
+    target_link_libraries(shared_lib_hits ${CUDA_CUBLAS_LIBRARIES})
+    target_link_libraries(shared_lib_pr ${FAISS_LIBRARY})
+    target_link_libraries(shared_lib_pr ${CUDA_CUBLAS_LIBRARIES})
+endif (FAISS_LIBRARY)
