--- a/examples/snn/CMakeLists.txt
+++ b/examples/snn/CMakeLists.txt
@@ -7,9 +7,11 @@ include(${CMAKE_SOURCE_DIR}/cmake/SetSubProject.cmake)
 
 target_link_libraries(${PROJECT_NAME} ${CUDA_cudadevrt_LIBRARY})
 
-if (FAISS_INCLUDE_DIR)
-    include_directories(${PROJECT_NAME} ${FAISS_INCLUDE_DIR})
-endif (FAISS_INCLUDE_DIR)
+if (FAISS_LIBRARY)
+    target_link_libraries(${PROJECT_NAME} ${FAISS_LIBRARY})
+    target_link_libraries(${PROJECT_NAME} ${FAISS_INCLUDE_DIR}/build/faiss/python/_swigfaiss.so)
+    target_link_libraries(${PROJECT_NAME} ${CUDA_CUBLAS_LIBRARIES})
+endif (FAISS_LIBRARY)
 
 add_test(NAME TEST_SNN COMMAND snn market --labels-file
   ${gunrock_INCLUDE_DIRS}/dataset/small/stars_2total_separate --k=2 --eps=1 --min-pts=1)
